CSS-update-fixed aligning issues

--- a/assets/CSS/aboutme.css
+++ b/assets/CSS/aboutme.css
@@ -43,7 +43,7 @@ h4 {
     float: left;
     margin-left:20px;
     margin-right: 20px;
-    width: 30%;
+    width: 70%;
     border-radius: 10
     px;
 }
@@ -85,10 +85,19 @@ footer {
     font-weight: 400;
     font-size: 30px;
     text-align: right;
-   
- 
 }
 
+#links{
+    margin-top: 20px;
+    width: 70%;
+    margin-left:20px;
+    margin-right: 20px;
+}
+a{
+    color: #FFEEEE;
+}
+
+/*media ruqries */
 @media screen and (max-width: 767px) {
 
     
@@ -101,11 +110,15 @@ footer {
     }
  
 
- /*mefia ruqries */
 @media screen and (max-width: 480px) {
 
     body {
         font-size: 18px ;
     
+    }
+    #subcol-image{
+        display: flex;
+        
+
     }
 }
